--- a/roles/flanneld/handlers/main.yml
+++ b/roles/flanneld/handlers/main.yml
@@ -14,3 +14,8 @@
     daemon_reload: true
   notify: restart docker
   when: "'kube_minions' in group_names"
+
+- name: enable iptables
+  systemd:
+    name: iptables
+    enabled: true
