--- a/roles/kubernetes/tasks/install_atomic.yml
+++ b/roles/kubernetes/tasks/install_atomic.yml
@@ -24,6 +24,16 @@
       state: latest
       mode: system
 
+  # FIX: Unable to find suitable network address.error='No default routes.'.
+  - name: patch kube-apiserver service
+    file:
+      path: /etc/systemd/system/kube-apiserver.service.d
+      state: directory
+  - copy:
+      src: kube-apiserver-dropin.conf
+      dest: /etc/systemd/system/kube-apiserver.service.d/override.conf
+    notify: systemd reload
+
   when: "'kube_masters' in group_names"
 
 # minion only block
