--- a/roles/storage-setup/tasks/fedora.yml
+++ b/roles/storage-setup/tasks/fedora.yml
@@ -22,17 +22,17 @@
 
   - name: grow root fs
     shell: xfs_growfs /
-    when: dockersetup|succeeded
+    when: dockersetup is succeeded
 
   - name: remove config
     file:
       path: /etc/sysconfig/docker-storage-setup
       state: absent
-    when: dockersetup|failed
+    when: dockersetup is failed
 
   - debug:
       msg: "FATAL: docker storage setup was not successfull, reboot and try again"
     failed_when: true
-    when: dockersetup|failed
+    when: dockersetup is failed
   
   when: storageconfig.changed
