--- a/roles/basic/tasks/main.yml
+++ b/roles/basic/tasks/main.yml
@@ -17,4 +17,8 @@
   notify: disable selinux
   when: ansible_selinux_python_present
 
+- name: install rpm-ostree packages (Atomic)
+  include_tasks: install_rpm_ostree.yml
+  when: is_atomic | default(false)
+
 - meta: flush_handlers
