--- a/roles/kubernetes/defaults/main.yml
+++ b/roles/kubernetes/defaults/main.yml
@@ -18,6 +18,8 @@ kube_dns: 172.17.0.2
 kube_dns_domain: cluster.local
 
 # images
+kube_master_image: registry.fedoraproject.org/f28/kubernetes-master
+kube_node_image: registry.fedoraproject.org/f28/kubernetes-node
 kube_apiserver_image: registry.fedoraproject.org/f27/kubernetes-apiserver
 kube_controller_manager_image: registry.fedoraproject.org/f27/kubernetes-controller-manager
 kube_scheduler_image: registry.fedoraproject.org/f27/kubernetes-scheduler
