--- a/roles/kubernetes/tasks/install_atomic.yml
+++ b/roles/kubernetes/tasks/install_atomic.yml
@@ -1,5 +1,14 @@
 # master only block
 - block:
+  - name: install kubernetes-master
+    atomic_container:
+      name: kubernetes-master
+      image: "{{kube_master_image}}"
+      backend: ostree
+      state: latest
+      mode: system
+    when: ansible_distribution_major_version == 28
+
   - name: install kube-apiserver
     atomic_container:
       name: kube-apiserver
@@ -7,6 +16,7 @@
       backend: ostree
       state: latest
       mode: system
+    when: ansible_distribution_major_version == 27
 
   - name: install kube-controller-manager
     atomic_container:
@@ -15,6 +25,7 @@
       backend: ostree
       state: latest
       mode: system
+    when: ansible_distribution_major_version == 27
 
   - name: install kube-scheduler
     atomic_container:
@@ -23,21 +34,33 @@
       backend: ostree
       state: latest
       mode: system
+    when: ansible_distribution_major_version == 27
 
   # FIX: Unable to find suitable network address.error='No default routes.'.
   - name: patch kube-apiserver service
     file:
       path: /etc/systemd/system/kube-apiserver.service.d
       state: directory
+    when: ansible_distribution_major_version == 27
   - copy:
       src: kube-apiserver-dropin.conf
       dest: /etc/systemd/system/kube-apiserver.service.d/override.conf
     notify: systemd reload
+    when: ansible_distribution_major_version == 27
 
-  when: "'kube_masters' in group_names"
+  when: "'kube_masters' in group_names and not rpm_ostree_kubernetes | default(false)"
 
 # minion only block
 - block:
+  - name: install kubernetes-node
+    atomic_container:
+      name: kubernetes-node
+      image: "{{kube_node_image}}"
+      backend: ostree
+      state: latest
+      mode: system
+    when: ansible_distribution_major_version == 28
+
   - name: install kubelet
     atomic_container:
       name: kubelet
@@ -45,6 +68,7 @@
       backend: ostree
       state: latest
       mode: system
+    when: ansible_distribution_major_version == 27
 
   - name: install kube-proxy
     atomic_container:
@@ -53,10 +77,6 @@
       backend: ostree
       state: latest
       mode: system
+    when: ansible_distribution_major_version == 27
 
-  when: "'kube_minions' in group_names"
-
-# FIX: exec kube-apiserver-docker.sh permission denied
-# - name: FIX binaries
-#   shell: "chmod a+x /sysroot/ostree/deploy/fedora-atomic/var/lib/containers/atomic/kube*/rootfs/usr/bin/kube*"
-#   changed_when: false
+  when: "'kube_minions' in group_names and not rpm_ostree_kubernetes | default(false)" 
