--- a/roles/flanneld/tasks/main.yml
+++ b/roles/flanneld/tasks/main.yml
@@ -1,22 +1,13 @@
 # install
 - name: install (Atomic)
-  atomic_container:
-    name: flanneld
-    image: "{{flanneld_image}}"
-    backend: ostree
-    state: latest
-    mode: system
+  include_tasks: install_atomic.yml
   when: is_atomic | default(false)
 
 - name: install (Debian)
   include_tasks: install_debian.yml
   when: ansible_os_family == 'Debian'
 
-- name: create config directory
-  file:
-    path: "{{flanneld_config_folder}}"
-    state: directory
-
+# firewall
 - name: modify firewall
   iptables:
     chain: FORWARD
@@ -27,12 +18,10 @@
     out_interface: flannel.1
     jump: ACCEPT
 
-- name: make firewall modifications permanent (Atomic)
-  template:
-    src: iptables.save.j2
-    dest: /etc/sysconfig/iptables
-  notify: enable iptables
-  when: is_atomic | default(false)
+- name: create config directory
+  file:
+    path: "{{flanneld_config_folder}}"
+    state: directory
 
 # pki
 - include_role:
@@ -50,7 +39,7 @@
 
   - name: upload cluster config to etcd
     shell: |
-      /usr/local/bin/etcdctl --endpoints https://{{ansible_hostname}}.{{kube_tld}}:{{etcd_port}} \
+      etcdctl --endpoints https://{{ansible_hostname}}.{{kube_tld}}:{{etcd_port}} \
       --ca-file {{etcd_cert_folder}}/ca.crt \
       --cert-file {{etcd_cert_folder}}/node.crt \
       --key-file {{etcd_cert_folder}}/node.key \
