cleanup kubernetes installation and fix iptables bug temporarily

--- a/roles/basic/handlers/main.yml
+++ b/roles/basic/handlers/main.yml
@@ -6,7 +6,9 @@
 
 # FIX this
 - name: reboot
-  shell: reboot
+  shell: sleep 1 && reboot
+  async: 1
+  poll: 0
   notify: wait
 
 - name: wait for host
