--- a/group_vars/atomic.yml
+++ b/group_vars/atomic.yml
@@ -2,4 +2,5 @@ is_atomic: true
 ansible_user: fedora
 rpm_ostree_flanneld: true
 rpm_ostree_etcd: true
-rpm_ostree_kubernetes: false
+rpm_ostree_kubernetes: true
+flanneld_configure_firewall: true
