--- a/roles/flanneld/defaults/main.yml
+++ b/roles/flanneld/defaults/main.yml
@@ -1,6 +1,7 @@
 flanneld_network_name: minion
 # flanneld network with subnet mask
 flanneld_network: 172.16.0.0/16
+flanneld_configure_firewall: false
 
 flanneld_config_folder: /etc/flanneld
 flanneld_cert_folder: "{{flanneld_config_folder}}/certs"
