--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -43,12 +43,20 @@
     notify: restart kube-controller-manager
   when: "'kube_masters' in group_names"
 
-# kubelet - minions only
-- name: copy kubelet config
-  template:
-    src: kubelet.j2
-    dest: "{{kube_config_folder}}/kubelet"
-  notify: restart kubelet
+# minions only block
+- block:
+  # kubelet
+  - name: copy kubelet config
+    template:
+      src: kubelet.j2
+      dest: "{{kube_config_folder}}/kubelet"
+    notify: restart kubelet
+  # proxy
+  - name: copy proxy config
+    template:
+      src: proxy.j2
+      dest: "{{kube_config_folder}}/proxy"
+    notify: restart kube-proxy
   when: "'kube_minions' in group_names"
 
 - meta: flush_handlers
