--- a/roles/kubernetes/tasks/install_atomic.yml
+++ b/roles/kubernetes/tasks/install_atomic.yml
@@ -1,16 +1,6 @@
 # master only block
 - block:
-  # kubernetes-master is not a system image
-  # - name: install kubernetes-master (Atomic 28)
-  #   atomic_container:
-  #     name: kubernetes-master
-  #     image: "{{kube_master_image}}"
-  #     backend: ostree
-  #     state: latest
-  #     mode: system
-  #   when: ansible_distribution_major_version == '28'
-
-  - name: install kubernetes master components (Atomic 27)
+  - name: install kubernetes master components via atomic containers
     atomic_container:
       name: "{{item.name}}"
       image:  "{{item.image}}"
@@ -24,10 +14,9 @@
         image:  "{{kube_controller_manager_image}}"
       - name: kube-scheduler
         image: "{{kube_scheduler_image}}"
-    when: ansible_distribution_major_version == '27'
 
   # FIX: Unable to find suitable network address.error='No default routes.'.
-  - name: patch kube-apiserver service
+  - name: patch kube-apiserver service (Atomic 27)
     file:
       path: /etc/systemd/system/kube-apiserver.service.d
       state: directory
@@ -36,34 +25,20 @@
       src: kube-apiserver-dropin.conf
       dest: /etc/systemd/system/kube-apiserver.service.d/override.conf
     notify: systemd reload
-    when: ansible_distribution_major_version == '27'
 
-  when: "'kube_masters' in group_names and not rpm_ostree_kubernetes | default(false)"
+  when: "'kube_masters' in group_names"
 
-# minion only block
-- block:
-  # kubernetes-node is not a system image
-  # - name: install kubernetes-node (Atomic 28)
-  #   atomic_container:
-  #     name: kubernetes-node
-  #     image: "{{kube_node_image}}"
-  #     backend: ostree
-  #     state: latest
-  #     mode: system
-  #   when: ansible_distribution_major_version == '28'
-
-  - name: install kubernetes minion components (Atomic 27)
-    atomic_container:
-      name: kubelet
+# minion only
+- name: install kubernetes minion components via atomic containers
+  atomic_container:
+    name: kubelet
+    image: "{{kube_kubelet_image}}"
+    backend: ostree
+    state: latest
+    mode: system
+  with_items:
+    - name: kubelet
       image: "{{kube_kubelet_image}}"
-      backend: ostree
-      state: latest
-      mode: system
-    with_items:
-      - name: kubelet
-        image: "{{kube_kubelet_image}}"
-      - name: kube-proxy
-        image:  "{{kube_proxy_image}}"
-    when: ansible_distribution_major_version == '27'
-
-  when: "'kube_minions' in group_names and not rpm_ostree_kubernetes | default(false)" 
+    - name: kube-proxy
+      image:  "{{kube_proxy_image}}"
+  when: "'kube_minions' in group_names" 
