--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -35,12 +35,23 @@
       src: apiserver.j2
       dest: "{{kube_config_folder}}/apiserver"
     notify: restart kube-apiserver
+
   # controller-manager
   - name: copy controller-manager config
     template:
       src: controller-manager.j2
       dest: "{{kube_config_folder}}/controller-manager"
     notify: restart kube-controller-manager
+
+  - name: enable kubernetes master components
+    systemd:
+      name: "{{item}}"
+      enabled: true
+    with_items:
+      - kube-apiserver
+      - kube-scheduler
+      - kube-controller-manager
+
   when: "'kube_masters' in group_names"
 
 # minions only block
@@ -51,12 +62,22 @@
       src: kubelet.j2
       dest: "{{kube_config_folder}}/kubelet"
     notify: restart kubelet
+
   # proxy
   - name: copy proxy config
     template:
       src: proxy.j2
       dest: "{{kube_config_folder}}/proxy"
     notify: restart kube-proxy
+
+  - name: enable kubernetes node components
+    systemd:
+      name: "{{item}}"
+      enabled: true
+    with_items:
+      - kubelet
+      - kube-proxy
+
   when: "'kube_minions' in group_names"
 
 - meta: flush_handlers
