add daemonset and deployments for heketi and glusterfs and create volumes

--- a/group_vars/atomic.yml
+++ b/group_vars/atomic.yml
@@ -1,3 +1,8 @@
 is_atomic: true
 ansible_user: fedora
 flanneld_configure_firewall: true
+rpm_ostree_flanneld: true
+rpm_ostree_etcd: true
+rpm_ostree_kubernetes: true
+rpm_ostree_glusterfs: false
+flanneld_configure_firewall: true
