--- a/roles/basic/tasks/install_rpm_ostree.yml
+++ b/roles/basic/tasks/install_rpm_ostree.yml
@@ -3,6 +3,7 @@
     name: rpm-ostree
   vars:
     rpm_ostree_package: flannel
+    rpm_ostree_version: "{{rpm_ostree_flanneld_version}}"
     rpm_ostree_binary_path: /usr/bin/flanneld
   when: rpm_ostree_flanneld | default(false)
 
@@ -11,6 +12,7 @@
     name: rpm-ostree
   vars:
     rpm_ostree_package: etcd
+    rpm_ostree_version: "{{rpm_ostree_etcd_version}}"
     rpm_ostree_binary_path: /usr/bin/etcd
   when: "'kube_masters' in group_names and rpm_ostree_etcd | default(false)"
 
@@ -19,6 +21,7 @@
     name: rpm-ostree
   vars:
     rpm_ostree_package: kubernetes-master
+    rpm_ostree_version: "{{rpm_ostree_kubernetes_version}}"
     rpm_ostree_binary_path: /usr/bin/kube-apiserver
   when: "'kube_masters' in group_names and rpm_ostree_kubernetes | default(false)"
 
@@ -27,5 +30,6 @@
     name: rpm-ostree
   vars:
     rpm_ostree_package: kubernetes-node
+    rpm_ostree_version: "{{rpm_ostree_kubernetes_version}}"
     rpm_ostree_binary_path: /usr/bin/kubelet
   when: "'kube_minions' in group_names and rpm_ostree_kubernetes | default(false)"
