--- a/roles/etcd/tasks/install_debian.yml
+++ b/roles/etcd/tasks/install_debian.yml
@@ -4,29 +4,18 @@
   ignore_errors: true
   changed_when: false
   check_mode: false
-  when: "etcd_arch is not defined or
-        etcd_arch is defined and
-        etcd_arch != 'arm'"
-
-- name: check version (arm)
-  shell: ETCD_UNSUPPORTED_ARCH=arm etcd --version
-  register: etcd_version
-  ignore_errors: true
-  changed_when: false
-  check_mode: false
-  when: "etcd_arch is defined and
-        etcd_arch == 'arm'"
+  when: "etcd_arch != 'arm'"
 
 # supported Debian
 - block:
-  - name: "install ({{ansible_architecture}})"
+  - name: "install ({{etcd_arch}})"
     unarchive:
-      src: "https://github.com/coreos/etcd/releases/download/{{etcd_download_version}}/etcd-{{etcd_download_version}}-linux-{{etcd_arch | default(ansible_architecture)}}.tar.gz"
+      src: "https://github.com/coreos/etcd/releases/download/v{{etcd_download_version}}/etcd-v{{etcd_download_version}}-linux-{{etcd_arch}}.tar.gz"
       dest: "{{etcd_download_dir}}"
       remote_src: true
 
   - copy:
-      src: "{{etcd_download_dir}}/etcd-{{etcd_download_version}}-linux-{{etcd_arch | default(ansible_architecture)}}/{{item}}"
+      src: "{{etcd_download_dir}}/etcd-v{{etcd_download_version}}-linux-{{etcd_arch}}/{{item}}"
       dest: "/usr/local/bin/{{item}}"
       remote_src: true
       mode: +x
@@ -36,11 +25,19 @@
     notify: restart etcd
   
   - file:
-      path: "{{etcd_download_dir}}/etcd-{{etcd_download_version}}-linux-{{etcd_arch | default(ansible_architecture)}}"
+      path: "{{etcd_download_dir}}/etcd-v{{etcd_download_version}}-linux-{{etcd_arch}}"
       state: absent
 
   when: "not etcd_install_local_binary and
-        etcd_download_version not in etcd_version.stdout"
+         etcd_download_version not in etcd_version.stdout"
+
+- name: check version (arm)
+  shell: ETCD_UNSUPPORTED_ARCH=arm etcd --version
+  register: etcd_version
+  ignore_errors: true
+  changed_when: false
+  check_mode: false
+  when: "etcd_arch == 'arm'"
 
 # install from local binary
 - block:
@@ -72,6 +69,7 @@
     path: /var/lib/etcd
     owner: etcd
     group: etcd
+    state: directory
 
 - name: create service
   template:
