--- a/roles/kubernetes/defaults/main.yml
+++ b/roles/kubernetes/defaults/main.yml
@@ -24,8 +24,8 @@ kube_controller_manager_image: registry.fedoraproject.org/f27/kubernetes-control
 kube_scheduler_image: registry.fedoraproject.org/f27/kubernetes-scheduler
 kube_kubelet_image: registry.fedoraproject.org/f27/kubernetes-kubelet
 kube_proxy_image: registry.fedoraproject.org/f27/kubernetes-proxy
-kube_download_version: v1.9.3
-#kube_arch:
+kube_download_version: 1.10.1
+kube_arch: amd64
 kube_download_dir: "{{cache_dir | default(ansible_env.HOME)}}"
 
 # etcd
