--- a/group_vars/atomic.yml
+++ b/group_vars/atomic.yml
@@ -1,3 +1,6 @@
-is_atomic: true
 ansible_user: fedora
 flanneld_configure_firewall: true
+flanneld_version: 0.9.0
+etcd_version: 3.2.7
+kube_version: 1.10.1
+freeipa_client_sssd: false
